Bug 119889 - Renaming a note opening it and editing its title does not rename it in the kontact notes view
Summary: Renaming a note opening it and editing its title does not rename it in the ko...
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: notes (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Michael Brade
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-01-10 23:21 UTC by Vincenzo Ciancia
Modified: 2006-01-11 00:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vincenzo Ciancia 2006-01-10 23:21:15 UTC
Version:            (using KDE KDE 3.5.0)
Installed from:    Fedora RPMs

If I double-click on a note in kontact, and change the title, the name in the icon view remains the old one - but if I rename it using the context menu, and then double click on the note, I see the new name in the title, so these two behaviours contradict each other.
Comment 1 Michael Brade 2006-01-11 00:42:45 UTC
SVN commit 496678 by brade:

Fixed #119889: when renaming a note within the note editor of Kontact update
the view as well (i.e., the listview item).

BUG: 119889


 M  +1 -1      knotes_part.cpp  


--- branches/KDE/3.5/kdepim/kontact/plugins/knotes/knotes_part.cpp #496677:496678
@@ -338,7 +338,7 @@
   mNoteEditDlg->setText( journal->description() );
 
   if ( mNoteEditDlg->exec() == QDialog::Accepted ) {
-    journal->setSummary( mNoteEditDlg->title() );
+    item->setText( mNoteEditDlg->title() );
     journal->setDescription( mNoteEditDlg->text() );
     mManager->save();
   }