Fixed #119889: when renaming a note within the note editor of Kontact update the view as well (i.e., the listview item).

BUG: 119889

svn path=/branches/KDE/3.5/kdepim/; revision=496678